Add "Search on Map" option
- Add checkbox in settings to enable map search
- When enabled, adds "Search on Map" to context menu
- Opens Google Maps search for highlighted text

--- a/options.html
+++ b/options.html
@@ -11,6 +11,13 @@
     <h1>Quick Directions Settings</h1>
     <p class="description">Add locations to use as starting points for directions. Highlight text on any webpage, right-click, and select a location to get directions.</p>
 
+    <div class="options-section">
+      <label class="checkbox-label">
+        <input type="checkbox" id="map-search-enabled">
+        Enable "Search on Map" option in the menu
+      </label>
+    </div>
+
     <div class="add-location">
       <h2>Add New Location</h2>
       <form id="add-location-form">
